--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -25,44 +26,49 @@
     </div>
   </nav>
   
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
-      <div class="banner" name="about-header">
-      <!-- Insert header information here -->
-      </div>
-      <div style="display: flex;flex-direction: row; margin:auto">
+  <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
+    <div class="banner" name="about-header">
+      <h3 style="text-align:center; padding: 20px;">Meet Our Team</h3>
+    </div>
+
+    <div style="display: flex; flex-direction: row; justify-content: space-around; margin: auto;">
+      
+      <!-- Person 1 -->
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1595152772835-219674b2a8a6?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=60" alt="Person1 image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title"><strong>Alex Morgan</strong></p>
+          <p>General Manager</p>
+          <p class="card-text">Alex oversees all dealership operations and ensures customer satisfaction is our top priority.</p>
+          <p>alex.morgan@example.com</p>
         </div>
       </div>
 
+      <!-- Person 2 -->
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?crop=faces&fit=crop&w=300&h=300" alt="Person2 image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title"><strong>Jamie Lee</strong></p>
+          <p>Sales Director</p>
+          <p class="card-text">Jamie leads our sales team with a focus on transparency and building long-term relationships.</p>
+          <p>jamie.lee@example.com</p>
         </div>
       </div>
 
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+      <!-- Person 3 -->
+      <!-- Person 3 -->
+    <div class="card" style="width: 30%;">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1544723795-3fb6469f5b39?crop=faces&fit=crop&w=300&h=300" alt="Person3 image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+        <p class="title"><strong>Sam Rivera</strong></p>
+        <p>Service Manager</p>
+        <p class="card-text">Sam ensures every vehicle we service leaves our shop in top condition, guaranteed.</p>
+        <p>sam.rivera@example.com</p>
         </div>
-      </div>
     </div>
+  
+
     </div>
-    </div>
-    
+  </div>
 </div>
-
 </html>
